feat(notes): complete implementation of notes library page
- Added a comprehensive notes library page allowing users to view, search, filter, and manage their notes in a responsive grid layout.
- Implemented real-time search and filtering by tags and guides, enhancing user experience and accessibility.
- Introduced inline editing for note titles and integrated delete functionality with confirmation prompts.
- Created utility functions for note content extraction and date formatting, ensuring proper display of note previews and timestamps.
- Updated localization for Hebrew strings throughout the notes management features.
- All acceptance criteria met, providing a robust interface for users to manage their notes effectively.

Closes Story 6.2 and prepares for Story 6.3 (Epic 6).

--- a/src/content/locale/he/guides/agents/intro-pm-analyst.json
+++ b/src/content/locale/he/guides/agents/intro-pm-analyst.json
@@ -253,17 +253,22 @@
     },
     {
       "type": "accordion",
-      "title": "שלבים:",
-      "content": [
+      "items": [
         {
-          "type": "list",
-          "ordered": true,
-          "items": [
-            "טען את John: @pm hi",
-            "בחר מהתפריט: *workflow-status כדי לראות היכן אתה עומד",
-            "אם זה פרויקט חדש, הרץ: *workflow-init כדי להגדיר את מסלול העבודה",
-            "עבור פיצ'ר בינוני, בחר: *tech-spec",
-            "John ישאל אותך שאלות על: מי המשתמשים? מה הבעיה? איזה סוגי אימות? קריטריוני הצלחה?"
+          "id": "john-steps",
+          "title": "שלבים:",
+          "content": [
+            {
+              "type": "list",
+              "ordered": true,
+              "items": [
+                "טען את John: @pm hi",
+                "בחר מהתפריט: *workflow-status כדי לראות היכן אתה עומד",
+                "אם זה פרויקט חדש, הרץ: *workflow-init כדי להגדיר את מסלול העבודה",
+                "עבור פיצ'ר בינוני, בחר: *tech-spec",
+                "John ישאל אותך שאלות על: מי המשתמשים? מה הבעיה? איזה סוגי אימות? קריטריוני הצלחה?"
+              ]
+            }
           ]
         }
       ]
@@ -385,17 +390,22 @@
     },
     {
       "type": "accordion",
-      "title": "שלבים:",
-      "content": [
+      "items": [
         {
-          "type": "list",
-          "ordered": true,
-          "items": [
-            "טען את Mary: @analyst hi",
-            "אם זה פרויקט קיים שלא תועד, התחל עם: *document-project",
-            "לאחר שהפרויקט מתועד, הרץ: *brainstorm-project",
-            "לאחר ה-Brainstorming, היא תציע: *research",
-            "לבסוף, *product-brief"
+          "id": "mary-steps",
+          "title": "שלבים:",
+          "content": [
+            {
+              "type": "list",
+              "ordered": true,
+              "items": [
+                "טען את Mary: @analyst hi",
+                "אם זה פרויקט קיים שלא תועד, התחל עם: *document-project",
+                "לאחר שהפרויקט מתועד, הרץ: *brainstorm-project",
+                "לאחר ה-Brainstorming, היא תציע: *research",
+                "לבסוף, *product-brief"
+              ]
+            }
           ]
         }
       ]
