feat(comments): enhance comment system with Q&A functionality and voting
- Updated the comment system to allow users to vote on comments as "helpful," with real-time vote count updates and visual feedback.
- Implemented Q&A functionality, enabling users to mark comments as questions and solutions, with distinct visual styling and filtering options.
- Enhanced the comment form to support markdown, auto-expanding text areas, and character limits, improving user engagement and interaction.
- Integrated Hebrew localization for all new features and messages, ensuring accessibility for Hebrew-speaking users.

Closes Story 8.4 and improves community interaction through enhanced commenting features.

--- a/src/content/locale/he/guides/core/glossary.json
+++ b/src/content/locale/he/guides/core/glossary.json
@@ -143,22 +143,10 @@
           "title": "BMAD",
           "content": [
             {
-              "id": "term-bmad-def",
+              "id": "term-bmad-text",
               "type": "text",
               "markdown": true,
-              "content": "**הגדרה:** BMAD הוא ראשי תיבות של במאד - שיטת עבודה מבוססת AI לפיתוח תוכנה. זו פלטפורמה שעוזרת לכם לנהל פרויקטים עם עזרת אגנטים חכמים."
-            },
-            {
-              "id": "term-bmad-example",
-              "type": "text",
-              "markdown": true,
-              "content": "**דוגמה:** במקום לנסות לזכור מה הצעד הבא בפרויקט, BMAD מנחה אתכם שלב אחר שלב."
-            },
-            {
-              "id": "term-bmad-see-also",
-              "type": "text",
-              "markdown": true,
-              "content": "**ראו גם:** מדריך ההתחלה המהירה"
+              "content": "**הגדרה:** BMAD הוא ראשי תיבות של במאד - שיטת עבודה מבוססת AI לפיתוח תוכנה. זו פלטפורמה שעוזרת לכם לנהל פרויקטים עם עזרת אגנטים חכמים.\n\n**דוגמה:** במקום לנסות לזכור מה הצעד הבא בפרויקט, BMAD מנחה אתכם שלב אחר שלב.\n\n**ראו גם:** מדריך ההתחלה המהירה"
             }
           ]
         },
