feat(comments): add edit and delete functionality for comments
- Implemented the ability for users to edit their comments, including validation for content length and empty submissions.
- Added a delete feature that supports both soft and hard deletion based on whether comments have replies.
- Enhanced localization for new messages related to editing and deleting comments, ensuring accessibility for Hebrew-speaking users.

Closes Story 8.6 and improves user control over comment management.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -33,6 +33,17 @@
     "path": "onboarding/day1.json"
   },
   {
+    "id": "onboarding-week1",
+    "title": "הדרכה לשבוע הראשון",
+    "description": "תוכנית שבועית מובנית להתנסות ראשונית עם BMAD. תוך שבוע תכירו 3-5 אגנטים, תריצו 5-7 וורקפלואים, ותבנו פרויקט קטן מקצה לקצה!",
+    "category": "onboarding",
+    "difficulty": "beginner",
+    "estimatedMinutes": 45,
+    "icon": "IconCalendar",
+    "tags": ["הדרכה", "שבוע-ראשון", "onboarding", "למידה", "אגנטים", "וורקפלואים"],
+    "path": "onboarding/week1.json"
+  },
+  {
     "id": "role-developers",
     "title": "מדריך למפתחים ומפתחות",
     "description": "מסלול למידה מלא למפתחים - Junior, Senior, Full-Stack. שליטה באגנטים והוורקפלואים הרלוונטיים, תרחישים מעשיים מהעבודה, והתאמה אישית לצרכים שלכם.",
