feat(notifications): implement comment notifications system
- Introduced a new notifications system to alert users about comment interactions, including replies and solutions marked.
- Created a database schema for notifications, including triggers for automatic notification generation on relevant events.
- Developed frontend components for displaying notifications in a dropdown menu, allowing users to view and manage their notifications easily.
- Enhanced the dashboard to fetch and display recent notifications alongside user activities, improving user engagement.
- Added localization support for Hebrew, ensuring accessibility for Hebrew-speaking users.

Closes Story 8.6 and enhances user interaction through timely notifications.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -22,6 +22,17 @@
     "path": "core/glossary.json"
   },
   {
+    "id": "faq-basics",
+    "title": "שאלות ותשובות - יסודות",
+    "description": "כל השאלות הבסיסיות על BMAD במקום אחד - מה זה, למי זה מיועד, איך מתחילים, כמה עולה, ומה אפשר לעשות איתו. תשובות קצרות וברורות.",
+    "category": "faq",
+    "difficulty": "beginner",
+    "estimatedMinutes": 20,
+    "icon": "IconQuestionMark",
+    "tags": ["שאלות", "יסודות", "FAQ", "מתחילים", "התחלה"],
+    "path": "faq/basics.json"
+  },
+  {
     "id": "onboarding-day1",
     "title": "הדרכה ליום הראשון",
     "description": "מדריך צעד-אחר-צעד ליום הראשון עם BMAD. תוך שעה תתקינו את המערכת, תריצו את הפקודה הראשונה, ותשיגו את הניצחון הראשון שלכם!",
