feat(admin-action-log): implement comprehensive admin action log system
- Developed an admin action log to track all administrative actions, enhancing accountability and audit capabilities.
- Implemented features including an action log table, advanced filtering options, CSV export functionality, and pagination.
- Ensured security with row-level security policies, allowing only admins to access the logs.
- Added helper functions for logging various admin actions, including user edits and content modifications.
- Enhanced localization support for Hebrew, ensuring accessibility for Hebrew-speaking users.

Closes Story 9.6 and strengthens administrative oversight in the platform.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -178,12 +178,12 @@
   {
     "id": "agents-tea-ux",
     "title": "מדריך אגנטים - חלק 2א: TEA + UX Designer",
-    "description": "הכירו את Emma (מאסטר טסט) ואת Lisa (מעצבת UX). מומחיות בדיקות ועיצוב חווית משתמש - איך להשתמש באגנטים האלה ביעילות מקסימלית.",
+    "description": "הכירו את Murat (Test Architect Expert) ו-Sally (UX Designer). תכנון אסטרטגיית בדיקות, יצירת תוכניות בדיקה, מחקר משתמשים, ועיצוב חוויית משתמש מקצועית.",
     "category": "agents",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "בדיקות", "UX", "עיצוב"],
+    "tags": ["אגנטים", "בדיקות", "UX", "עיצוב", "Murat", "Sally"],
     "path": "agents/tea-ux.json"
   },
   {
