feat(performance): enhance mobile performance with lazy loading and caching
- Implemented lazy loading for heavy components and modals to improve initial load times and responsiveness on mobile devices.
- Introduced caching strategies for API calls to enhance performance and reduce unnecessary network requests.
- Optimized various components with React.memo to prevent unnecessary re-renders, further improving application efficiency.
- Updated documentation to reflect new performance optimization techniques and caching utilities.

Closes Story 10.4 and significantly enhances the user experience on mobile networks.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -270,8 +270,8 @@
     "category": "workflows",
     "difficulty": "intermediate",
     "estimatedMinutes": 45,
-    "icon": "IconGitBranch",
-    "tags": ["וורקפלואים", "מפרט", "ארכיטקטורה", "תכנון"],
+    "icon": "IconFileText",
+    "tags": ["וורקפלואים", "מפרט", "ארכיטקטורה", "תכנון", "PRD", "tech-spec"],
     "path": "workflows/phase2-core.json"
   },
   {
