Update Story 0.6 Status and Complete Story 0.7 Implementation
- Marked Story 0.6 as "not doing now" and adjusted total story points accordingly.
- Completed Story 0.7, implementing real-time avatar updates across all components without page refresh.
- Enhanced `AuthContext` to include an `updateAvatar` method for immediate state updates.
- Updated relevant components (Profile, Header, Sidebar) to utilize the new avatar update functionality.
- Added a comprehensive guide for workflows management, marking it as complete in the progress tracker.
- Updated `GUIDES-PROGRESS-TRACKER.md` to reflect the latest completion status of guides.
- Verified all changes for functionality and resolved any TypeScript errors, preparing features for production.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -321,12 +321,12 @@
   {
     "id": "workflows-management",
     "title": "מדריך וורקפלואים - חלק 3ד: Project Management",
-    "description": "וורקפלואים לניהול הפרויקט - retrospective, correct-course, workflow-status. מעקב, התאמות, ושיפור מתמיד של התהליכים.",
+    "description": "ניהול פרויקט שוטף - מעקב אחר סטטוס, רטרוספקטיבות, ותיקון מסלול. איך עוקבים אחרי התקדמות הפרויקט, מזהים בעיות, ומתקנים כיוון בזמן.",
     "category": "workflows",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
-    "icon": "IconGitBranch",
-    "tags": ["וורקפלואים", "ניהול", "רטרו", "מעקב"],
+    "icon": "IconChartLine",
+    "tags": ["וורקפלואים", "ניהול", "management", "retrospective", "status"],
     "path": "workflows/management.json"
   },
   {
