Update FAQ guide and progress tracker for installation issues
- Enhanced the FAQ guide for installation by updating the title and description to provide clearer solutions for common installation problems with BMAD, Node.js, and Cursor.
- Added a new JSON file for the installation FAQ, detailing structured content and a comprehensive table of contents for better navigation.
- Updated `GUIDES-PROGRESS-TRACKER.md` to reflect the improved completion status of the FAQ section, increasing the completion percentage from 17% to 33%.
- Verified all changes for accuracy and ensured a consistent user experience across the documentation.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -463,13 +463,13 @@
   },
   {
     "id": "faq-installation",
-    "title": "שאלות ותשובות - חלק 1ב: התקנה",
-    "description": "שאלות נפוצות על התקנה והגדרה - בעיות נפוצות, תאימות למערכות שונות, הגדרת IDEs, ותיקון שגיאות התקנה.",
+    "title": "שאלות ותשובות - התקנה",
+    "description": "כל השאלות והבעיות הנפוצות על התקנת BMAD - פתרונות לבעיות עם Node.js, Cursor, Claude, והגדרות. מדריך פתרון בעיות מקיף למתחילים.",
     "category": "faq",
     "difficulty": "beginner",
     "estimatedMinutes": 20,
-    "icon": "IconQuestionMark",
-    "tags": ["שאלות", "התקנה", "טכני", "בעיות"],
+    "icon": "IconDownload",
+    "tags": ["שאלות", "התקנה", "טכני", "בעיות", "פתרון-תקלות"],
     "path": "faq/installation.json"
   },
   {
