Update installation FAQ and progress tracker; consolidate settings into profile page
- Translated and enhanced the installation FAQ guide, improving clarity and structure for common installation issues related to BMAD, Node.js, and Cursor.
- Updated the progress tracker to reflect the completion of the installation FAQ, increasing the overall completion percentage from 74% to 79%.
- Merged settings features into the Profile page, including notification settings and account deletion options, streamlining user experience.
- Removed the standalone Settings page and related components to reduce redundancy and improve navigation.
- Verified all changes for functionality and ensured a consistent user experience across the application.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -474,13 +474,13 @@
   },
   {
     "id": "faq-agents",
-    "title": "שאלות ותשובות - חלק 2א: אגנטים",
-    "description": "שאלות נפוצות על אגנטים - איזה אגנט להשתמש מתי, איך להחליף בין אגנטים, שילוב אגנטים, ותפקידי האגנטים.",
+    "title": "שאלות ותשובות - אגנטים",
+    "description": "שאלות נפוצות על אגנטים ב-BMAD - איזה אגנט להשתמש מתי, איך להחליף בין אגנטים, שילוב אגנטים, Party Mode, CIS, ותפקידי האגנטים. כל התשובות במקום אחד!",
     "category": "faq",
     "difficulty": "intermediate",
     "estimatedMinutes": 25,
     "icon": "IconQuestionMark",
-    "tags": ["שאלות", "אגנטים", "שימוש", "טיפים"],
+    "tags": ["שאלות", "אגנטים", "שימוש", "טיפים", "party-mode", "CIS"],
     "path": "faq/agents.json"
   },
   {
